2013-02-02  Michal Staniaszek  <mxs968@cs.bham.ac.uk>

	* general_util.c: Function for freeing memory allocated for
	double_multi_arr structs. Default parameter file has more files to output
	gaussian data to. Separate ones for raw data and that generated from
	an event file.

	* math_util.c: GSL random number generator is deallocated when
	the program exits using an atexit function. Function for shifting
	a gauss transform so that all points are non-negative

	* generator.c: Generation of event streams from gaussians. Generation
	of functions simplified to a single function.

	* launcher.c: Generation of event streams from gaussians possible
	by passing the -f rand switch to the launcher. If no parameter is
	provided then the default muparser version is used which takes the
	function in the paramfile. Function generation is done using the
	-r switch. Adding -R outputs gaussians in their raw forms, and
	including an input file with one-dimensional data has the program
	centre a gaussian on each point.

2013-02-01  Michal Staniaszek  <mxs968@cs.bham.ac.uk>

	* launcher.c: Added struct to make adding switches easier. Split
	multi-estimate function into gaussian and other estimators since
	return types are different.

	* generator.c: Random functions can now be generated with the
	-r switch. Still untested, but appears to work as intended. Another
	function for gaussians also implemented, but not sure of what
	functionality it should have. One function is required to generate
	random functions for experimenting on, the other is used to generate
	gaussians from event data to use in gaussian estimates?

	* file_util.c: Function for outputting double_multi_arr struct.

	* math_util.c: Fixed cause of crash on fclose when calling the
	gauss_transform function - data was being written to un-malloced
	locations. Changed return type of gaussian transform to struct to
	make it easier to work with. Gaussian transform needs some kind of